# codebase-chat

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-rocm.txt  requirements.txt
src/: main.py
src/codebase_chat/: config.py  main.py
src/codebase_chat/core/: processor.py
src/codebase_chat/middleware/: base.py
src/codebase_chat/models/: code_chunk.py
src/codebase_chat/providers/: base.py  factory.py  flag_embedding.py  ollama.py  siliconflow.py
src/codebase_chat/strategies/: base.py  golang_chunker.py  line_chunker.py
